@startuml

hide empty members
set namespaceSeparator ::

namespace amsr {
namespace json {

   class LevelValidator

   class CompositionParser<StrictParser<Child>> {}

   class StrictParser<Child> {}

   class StructureParser<StrictParser<Child>> {}

   class StructureParserBase<logic> {}

   class JsonData {}
   class JsonOps {}

   namespace v1 {
      class SingleArrayParser<Child> {}

      class SingleObjectParser<Child> {}

      class Parser<Child> {}

      SingleArrayParser --|> Parser
      SingleArrayParser --> amsr::json::LevelValidator

      SingleObjectParser --|> Parser
      SingleObjectParser --> amsr::json::LevelValidator

      Parser --|> amsr::json::CompositionParser
      Parser --> amsr::json::JsonData
   }

   CompositionParser --|> StrictParser
   CompositionParser --> JsonData

   StrictParser --> StructureParser
   StructureParser --|> StructureParserBase
   StructureParser --> StrictParser
   StructureParser --> JsonOps

   JsonOps --> JsonData
   JsonOps --> OptChar
}
}
@enduml
